Bug 370341 - Meta+Shift+KEY shortcuts not working
Summary: Meta+Shift+KEY shortcuts not working
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D3015
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-09 11:04 UTC by Roman Gilg
Modified: 2021-05-19 14:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.2
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2016-10-09 11:04:45 UTC
Trying to set such a (Global) Keyboard shortcut in the KCM doesn't work in Wayland. The ones, set in X, work neither.

Reproducible: Always
Comment 1 Martin Flöser 2016-10-10 05:44:12 UTC
Do you have me an example of a shortcut which has that by default?
Comment 2 Roman Gilg 2016-10-10 20:31:31 UTC
I think there are no shortcuts, which have this as default and can be used already in Wayland. I only found "Print rectengular screen" and "Walk activities backwards".

I always set my "Move window one Virtual Desktop Up" to Meta+Shift+W and this is not working, it's working though, if I set it to something else, that's why I thought the problem are not the Virtual Desktops themselves.

I just tried out setting Meta+Shift+D in my Wayland session as some random function (Volume up), which didn't triggered pressing it. But setting Meta+D to this same function worked.
Comment 3 Martin Flöser 2016-10-11 07:27:33 UTC
Git commit e8d6008726e62c39b0ee75bb710a6671b02f3487 by Martin Gräßlin.
Committed on 11/10/2016 at 07:26.
Pushed by graesslin into branch 'Plasma/5.8'.

Test case for global shortcut Meta+Shift+w

The global shortcut meta+shift+w does not trigger as the test case
shows.

M  +28   -0    autotests/integration/globalshortcuts_test.cpp

http://commits.kde.org/kwin/e8d6008726e62c39b0ee75bb710a6671b02f3487
Comment 4 Martin Flöser 2016-10-11 07:51:38 UTC
possible patch at https://phabricator.kde.org/D3015
Comment 5 Martin Flöser 2016-10-17 06:13:45 UTC
Git commit 78a2732a9a421b8554022ec5edcca30d95b45d1a by Martin Gräßlin.
Committed on 17/10/2016 at 06:13.
Pushed by graesslin into branch 'Plasma/5.8'.

Fix shortcut triggering with shift+letter

Summary:
A shortcut with e.g. shift+w could not be triggered as shift is
considered as consumed. It transforms the keysym to an uppercase variant
thus it is consumed.

This change checks for the condition that shift is pressed and is the
only consumed modifier. If the current keysym is a letter the shift is
removed from the consumed modifier again to still support the shortcut.
FIXED-IN: 5.8.2

Reviewers: #kwin, #plasma_on_wayland

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D3015

M  +1    -2    autotests/integration/globalshortcuts_test.cpp
M  +13   -2    keyboard_input.cpp
M  +1    -1    keyboard_input.h

http://commits.kde.org/kwin/78a2732a9a421b8554022ec5edcca30d95b45d1a
Comment 6 Andrey 2021-05-19 14:08:27 UTC
What about other symbols, ctrl+shift+/ etc.?